--- a/public/index.html
+++ b/public/index.html
@@ -24,11 +24,23 @@
               <label for="coach">Coach - Homepage</label>
             </div>
             <div>
-              <input type="checkbox" id="kate-spade" name="site" value="https://www.katespade.com" />
+              <input
+                type="checkbox"
+                id="coach-outlet"
+                name="site"
+                value="https://www.coachoutlet.com"
+              />
+              <label for="coach-outlet">Coach Outlet - Homepage</label>
+            </div>
+            <div>
+              <input
+                type="checkbox"
+                id="kate-spade"
+                name="site"
+                value="https://www.katespade.com"
+              />
               <label for="kate-spade">Kate Spade - Homepage</label>
             </div>
-         
-            <div>
             <div>
               <button id="run" type="submit">Submit form</button>
             </div>
@@ -37,6 +49,7 @@
       </section>
       <section id="data"></section>
     </main>
+    <script src="/assets/js/site.js"></script>
     <script src="/assets/js/index.js"></script>
   </body>
 </html>
