--- a/public/index.html
+++ b/public/index.html
@@ -14,35 +14,9 @@
         <form>
           <fieldset>
             <legend>Choose your sites</legend>
+
             <div>
-              <input
-                type="checkbox"
-                id="coach"
-                name="site"
-                value="https://www.coach.com"
-              />
-              <label for="coach">Coach - Homepage</label>
-            </div>
-            <div>
-              <input
-                type="checkbox"
-                id="coach-outlet"
-                name="site"
-                value="https://www.coachoutlet.com"
-              />
-              <label for="coach-outlet">Coach Outlet - Homepage</label>
-            </div>
-            <div>
-              <input
-                type="checkbox"
-                id="kate-spade"
-                name="site"
-                value="https://www.katespade.com"
-              />
-              <label for="kate-spade">Kate Spade - Homepage</label>
-            </div>
-            <div>
-              <button id="run" type="submit">Submit form</button>
+              <button id="run" type="submit">RUN!</button>
             </div>
           </fieldset>
         </form>
