--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,10 @@
 
   <body>
     <main>
-      <section>
+      <section id="site-selection">
         <form>
           <fieldset>
             <legend>Choose your sites</legend>
-
             <div>
               <button id="run" type="submit">RUN!</button>
             </div>
@@ -23,6 +22,7 @@
       </section>
       <section id="data"></section>
     </main>
+    <!-- <script src="/assets/js/timer.js"></script> -->
     <script src="/assets/js/site.js"></script>
     <script src="/assets/js/index.js"></script>
   </body>
